# postgres-client

./: README.md  pyproject.toml
postgres_client/: __init__.py  core.py
